--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,5 @@
 Huang Peng <shawn.p.huang@gmail.com>
 Pravin Satpute <pravin.d.s@gmail.com>
+
+Sayura scheme and algorithm:
+* Anuradha Ratnaweera <anuradha@taprobane.org>
